added more changes and fixes